apps-ulm/grafana-operator/templates/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-ui-route
spec:
  gateways:
  # - istio-gateway/default
  - istio-ingress/default
  hosts:
  # - grafana.pd.k8s.altamiracorp.com
  - '1.0.0.127'
  http:
  - name: grafana-ui-http-route
    route:
    - destination:
        host: grafana-service.apps-ulm.svc.cluster.local # <------- Change 'grafana-server.grafana' to `{service-name.namespace}`
        port:
          # number: 80
          number: 9001 # <--------- Advertised port on the service
